--- a/TimeyCore/TimeyCore.vcxproj
+++ b/TimeyCore/TimeyCore.vcxproj
@@ -75,8 +75,8 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>TIMEY_PLATFORM_WINDOWS;TIMEY_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\vendor\sqlite3;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>TIMEY_PLATFORM_WINDOWS;TIMEY_ENABLE_ASSERT;TIMEY_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;src\Core;..\vendor\sqlite3;..\vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -91,8 +91,8 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>TIMEY_PLATFORM_WINDOWS;TIMEY_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\vendor\sqlite3;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>TIMEY_PLATFORM_WINDOWS;TIMEY_ENABLE_ASSERT;TIMEY_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;src\Core;..\vendor\sqlite3;..\vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -111,8 +111,8 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>TIMEY_PLATFORM_WINDOWS;TIMEY_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\vendor\sqlite3;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>TIMEY_PLATFORM_WINDOWS;TIMEY_ENABLE_ASSERT;TIMEY_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;src\Core;..\vendor\sqlite3;..\vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -129,7 +129,99 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\test.cpp" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\async.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\async_logger-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\async_logger.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\argv.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\env.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\helpers-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\helpers.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\log_levels.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\common-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\common.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\backtracer-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\backtracer.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\circular_q.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\console_globals.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\file_helper-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\file_helper.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\fmt_helper.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\log_msg-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\log_msg.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\log_msg_buffer-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\log_msg_buffer.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\mpmc_blocking_q.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\null_mutex.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\os-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\os.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\periodic_worker-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\periodic_worker.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\registry-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\registry.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\synchronous_factory.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\tcp_client-windows.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\tcp_client.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\thread_pool-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\thread_pool.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\windows_include.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bin_to_hex.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\chrono.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\color.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\compile.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\core.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\format-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\format.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\locale.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\ostream.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\posix.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\printf.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\ranges.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\fmt.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\ostr.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\formatter.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\fwd.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\logger-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\logger.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\pattern_formatter-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\pattern_formatter.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\android_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\ansicolor_sink-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\ansicolor_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\base_sink-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\base_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\basic_file_sink-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\basic_file_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\daily_file_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\dist_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\dup_filter_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\msvc_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\null_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\ostream_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\ringbuffer_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\rotating_file_sink-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\rotating_file_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\sink-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\stdout_color_sinks-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\stdout_color_sinks.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\stdout_sinks-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\stdout_sinks.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\syslog_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\systemd_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\tcp_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\win_eventlog_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\wincolor_sink-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\wincolor_sink.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\spdlog-inl.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\spdlog.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\tweakme.h" />
+    <ClInclude Include="..\vendor\spdlog\include\spdlog\version.h" />
+    <ClInclude Include="src\Core\Log.h" />
+    <ClInclude Include="src\TimeyCore.h" />
+    <ClInclude Include="src\timey_pch.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Core\Log.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\vendor\sqlite3\sqlite3.vcxproj">
