--- a/TimeyCore/TimeyCore.vcxproj.filters
+++ b/TimeyCore/TimeyCore.vcxproj.filters
@@ -308,6 +308,7 @@
     </ClInclude>
     <ClInclude Include="src\Core\DbClasses\CoreDataBase.h" />
     <ClInclude Include="src\Core\DbClasses\Query.h" />
+    <ClInclude Include="src\Core\DbClasses\QueryResult.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Log.cpp">
@@ -318,5 +319,6 @@
     </ClCompile>
     <ClCompile Include="src\Core\DbClasses\CoreDataBase.cpp" />
     <ClCompile Include="src\Core\DbClasses\Query.cpp" />
+    <ClCompile Include="src\Core\DbClasses\QueryResult.cpp" />
   </ItemGroup>
 </Project>
