add objects and session database

--- a/TimeyCore/TimeyCore.vcxproj.filters
+++ b/TimeyCore/TimeyCore.vcxproj.filters
@@ -309,6 +309,8 @@
     <ClInclude Include="src\Core\DbClasses\CoreDataBase.h" />
     <ClInclude Include="src\Core\DbClasses\Query.h" />
     <ClInclude Include="src\Core\DbClasses\QueryResult.h" />
+    <ClInclude Include="src\Core\DbClasses\SessionDataBase.h" />
+    <ClInclude Include="src\Core\Object.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Log.cpp">
@@ -320,5 +322,6 @@
     <ClCompile Include="src\Core\DbClasses\CoreDataBase.cpp" />
     <ClCompile Include="src\Core\DbClasses\Query.cpp" />
     <ClCompile Include="src\Core\DbClasses\QueryResult.cpp" />
+    <ClCompile Include="src\Core\DbClasses\SessionDataBase.cpp" />
   </ItemGroup>
 </Project>
