--- a/TimeyCore/TimeyCore.vcxproj
+++ b/TimeyCore/TimeyCore.vcxproj
@@ -219,9 +219,11 @@
     <ClInclude Include="..\vendor\spdlog\include\spdlog\spdlog.h" />
     <ClInclude Include="..\vendor\spdlog\include\spdlog\tweakme.h" />
     <ClInclude Include="..\vendor\spdlog\include\spdlog\version.h" />
+    <ClInclude Include="src\Core\Object.h" />
     <ClInclude Include="src\Core\DbClasses\CoreDataBase.h" />
     <ClInclude Include="src\Core\DbClasses\Query.h" />
     <ClInclude Include="src\Core\DbClasses\QueryResult.h" />
+    <ClInclude Include="src\Core\DbClasses\SessionDataBase.h" />
     <ClInclude Include="src\Core\Log.h" />
     <ClInclude Include="src\TimeyCore.h" />
     <ClInclude Include="src\timey_pch.h" />
@@ -230,6 +232,7 @@
     <ClCompile Include="src\Core\DbClasses\CoreDataBase.cpp" />
     <ClCompile Include="src\Core\DbClasses\Query.cpp" />
     <ClCompile Include="src\Core\DbClasses\QueryResult.cpp" />
+    <ClCompile Include="src\Core\DbClasses\SessionDataBase.cpp" />
     <ClCompile Include="src\Core\Log.cpp" />
     <ClCompile Include="src\timey_pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
