--- a/TimeyCore/TimeyCore.vcxproj
+++ b/TimeyCore/TimeyCore.vcxproj
@@ -219,6 +219,7 @@
     <ClInclude Include="..\vendor\spdlog\include\spdlog\spdlog.h" />
     <ClInclude Include="..\vendor\spdlog\include\spdlog\tweakme.h" />
     <ClInclude Include="..\vendor\spdlog\include\spdlog\version.h" />
+    <ClInclude Include="src\Core\FileManager.h" />
     <ClInclude Include="src\Core\Object.h" />
     <ClInclude Include="src\Core\DbClasses\CoreDataBase.h" />
     <ClInclude Include="src\Core\DbClasses\Query.h" />
@@ -233,6 +234,7 @@
     <ClCompile Include="src\Core\DbClasses\Query.cpp" />
     <ClCompile Include="src\Core\DbClasses\QueryResult.cpp" />
     <ClCompile Include="src\Core\DbClasses\SessionDataBase.cpp" />
+    <ClCompile Include="src\Core\FileManager.cpp" />
     <ClCompile Include="src\Core\Log.cpp" />
     <ClCompile Include="src\timey_pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
