add tags database (not tested yet)

--- a/TimeyCore/TimeyCore.vcxproj.filters
+++ b/TimeyCore/TimeyCore.vcxproj.filters
@@ -312,6 +312,7 @@
     <ClInclude Include="src\Core\DbClasses\SessionDataBase.h" />
     <ClInclude Include="src\Core\Object.h" />
     <ClInclude Include="src\Core\FileManager.h" />
+    <ClInclude Include="src\Core\DbClasses\TagDataBase.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Log.cpp">
@@ -325,5 +326,6 @@
     <ClCompile Include="src\Core\DbClasses\QueryResult.cpp" />
     <ClCompile Include="src\Core\DbClasses\SessionDataBase.cpp" />
     <ClCompile Include="src\Core\FileManager.cpp" />
+    <ClCompile Include="src\Core\DbClasses\TagDataBase.cpp" />
   </ItemGroup>
 </Project>
