--- a/TimeyCore/TimeyCore.vcxproj.filters
+++ b/TimeyCore/TimeyCore.vcxproj.filters
@@ -314,6 +314,8 @@
     <ClInclude Include="src\Core\FileManager.h" />
     <ClInclude Include="src\Core\DbClasses\TagDataBase.h" />
     <ClInclude Include="src\Core\DbClasses\ProjectDataBase.h" />
+    <ClInclude Include="src\Core\DbClasses\GroupDataBase.h" />
+    <ClInclude Include="src\Core\DbClasses\ProjectGroupDataBase.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Log.cpp">
@@ -329,5 +331,6 @@
     <ClCompile Include="src\Core\FileManager.cpp" />
     <ClCompile Include="src\Core\DbClasses\TagDataBase.cpp" />
     <ClCompile Include="src\Core\DbClasses\ProjectDataBase.cpp" />
+    <ClCompile Include="src\Core\DbClasses\ProjectGroupDataBase.cpp" />
   </ItemGroup>
 </Project>
