--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "vendor/spdlog"]
 	path = vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "vendor/imgui"]
+	path = vendor/imgui
+	url = https://github.com/YPWang0818/imgui
+[submodule "vendor/glfw"]
+	path = vendor/glfw
+	url = https://github.com/YPWang0818/glfw
