--- a/TimeyCore/TimeyCore.vcxproj
+++ b/TimeyCore/TimeyCore.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>timey_pch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>TIMEY_PLATFORM_WINDOWS;TIMEY_ENABLE_ASSERT;TIMEY_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;src\Core;..\vendor\sqlite3;..\vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;src\Core;..\vendor\sqlite3;..\vendor\spdlog\include;..\vendor\imgui;..\vendor\glad\include;..\vendor\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -94,7 +94,7 @@
       <PrecompiledHeaderFile>timey_pch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>TIMEY_PLATFORM_WINDOWS;TIMEY_ENABLE_ASSERT;TIMEY_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;src\Core;..\vendor\sqlite3;..\vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;src\Core;..\vendor\sqlite3;..\vendor\spdlog\include;..\vendor\imgui;..\vendor\glad\include;..\vendor\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -115,7 +115,7 @@
       <PrecompiledHeaderFile>timey_pch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>TIMEY_PLATFORM_WINDOWS;TIMEY_ENABLE_ASSERT;TIMEY_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;src\Core;..\vendor\sqlite3;..\vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;src\Core;..\vendor\sqlite3;..\vendor\spdlog\include;..\vendor\imgui;..\vendor\glad\include;..\vendor\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -132,105 +132,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\async.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\async_logger-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\async_logger.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\argv.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\env.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\helpers-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\helpers.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\cfg\log_levels.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\common-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\common.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\backtracer-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\backtracer.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\circular_q.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\console_globals.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\file_helper-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\file_helper.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\fmt_helper.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\log_msg-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\log_msg.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\log_msg_buffer-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\log_msg_buffer.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\mpmc_blocking_q.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\null_mutex.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\os-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\os.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\periodic_worker-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\periodic_worker.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\registry-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\registry.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\synchronous_factory.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\tcp_client-windows.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\tcp_client.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\thread_pool-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\thread_pool.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\details\windows_include.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bin_to_hex.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\chrono.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\color.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\compile.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\core.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\format-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\format.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\locale.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\ostream.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\posix.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\printf.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\bundled\ranges.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\fmt.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fmt\ostr.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\formatter.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\fwd.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\logger-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\logger.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\pattern_formatter-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\pattern_formatter.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\android_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\ansicolor_sink-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\ansicolor_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\base_sink-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\base_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\basic_file_sink-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\basic_file_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\daily_file_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\dist_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\dup_filter_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\msvc_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\null_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\ostream_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\ringbuffer_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\rotating_file_sink-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\rotating_file_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\sink-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\stdout_color_sinks-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\stdout_color_sinks.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\stdout_sinks-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\stdout_sinks.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\syslog_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\systemd_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\tcp_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\win_eventlog_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\wincolor_sink-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\sinks\wincolor_sink.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\spdlog-inl.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\spdlog.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\tweakme.h" />
-    <ClInclude Include="..\vendor\spdlog\include\spdlog\version.h" />
-    <ClInclude Include="src\Core\DbClasses\ProjectDataBase.h" />
-    <ClInclude Include="src\Core\DbClasses\GroupDataBase.h" />
-    <ClInclude Include="src\Core\DbClasses\ProjectGroupDataBase.h" />
-    <ClInclude Include="src\Core\DbClasses\TagDataBase.h" />
-    <ClInclude Include="src\Core\DbClasses\TagGroupDataBase.h" />
-    <ClInclude Include="src\Core\FileManager.h" />
-    <ClInclude Include="src\Core\Object.h" />
     <ClInclude Include="src\Core\DbClasses\CoreDataBase.h" />
+    <ClInclude Include="src\Core\DbClasses\GroupDataBase.h" />
+    <ClInclude Include="src\Core\DbClasses\ProjectDataBase.h" />
+    <ClInclude Include="src\Core\DbClasses\ProjectGroupDataBase.h" />
     <ClInclude Include="src\Core\DbClasses\Query.h" />
     <ClInclude Include="src\Core\DbClasses\QueryResult.h" />
     <ClInclude Include="src\Core\DbClasses\SessionDataBase.h" />
+    <ClInclude Include="src\Core\DbClasses\TagDataBase.h" />
+    <ClInclude Include="src\Core\DbClasses\TagGroupDataBase.h" />
+    <ClInclude Include="src\Core\FileManager.h" />
     <ClInclude Include="src\Core\Log.h" />
+    <ClInclude Include="src\Core\Object.h" />
+    <ClInclude Include="src\Core\Utilty.h" />
     <ClInclude Include="src\TimeyCore.h" />
     <ClInclude Include="src\timey_pch.h" />
   </ItemGroup>
@@ -252,6 +166,18 @@
   <ItemGroup>
     <ProjectReference Include="..\vendor\sqlite3\sqlite3.vcxproj">
       <Project>{0ABC9DA7-769B-1C43-7FB3-A719EB1183A4}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\vendor\imgui\ImGui.vcxproj">
+      <Project>{C0FF640D-2C14-8DBE-F595-301E616989EF}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\vendor\spdlog\spdlog.vcxproj">
+      <Project>{8EAD431C-7A4F-6EF2-630A-82464F4BF542}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\vendor\glad\glad.vcxproj">
+      <Project>{DD62977C-C999-980D-7286-7E105E9C140F}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\vendor\glfw\GLFW.vcxproj">
+      <Project>{154B857C-0182-860D-AA6E-6C109684020F}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
