--- a/TimeyApplication/TimeyApplication.vcxproj.filters
+++ b/TimeyApplication/TimeyApplication.vcxproj.filters
@@ -45,6 +45,7 @@
     <ClInclude Include="src\timey_pch.h" />
     <ClInclude Include="src\UI\ImguiBackend.h" />
     <ClInclude Include="src\UI\UILayer.h" />
+    <ClInclude Include="src\UI\Windows.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\AppCore\Application.cpp">
@@ -65,5 +66,6 @@
     <ClCompile Include="src\timey_pch.cpp" />
     <ClCompile Include="src\UI\ImguiBackend.cpp" />
     <ClCompile Include="src\UI\UILayer.cpp" />
+    <ClCompile Include="src\UI\Windows.cpp" />
   </ItemGroup>
 </Project>
