--- a/TimeyApplication/imgui.ini
+++ b/TimeyApplication/imgui.ini
@@ -1,36 +1,26 @@
+[Window][Minimal Window]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
 [Window][Hellow World.]
-Pos=54,109
-Size=255,66
+Pos=731,56
+Size=191,48
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-ViewportPos=726,66
-ViewportId=0xE927CF2F
-Size=560,800
+Pos=0,362
+Size=1280,358
 Collapsed=0
 DockId=0x00000003,0
 
-[Window][Dear ImGui Metrics]
-Pos=191,378
-Size=345,239
-Collapsed=1
-
-[Window][DockSpace Demo]
-Pos=0,0
-Size=1280,720
-Collapsed=0
-
-[Window][Example: Custom rendering]
-Pos=60,60
-Size=553,413
-Collapsed=0
-
 [Docking][Data]
-DockNode  ID=0x00000003 Pos=726,66 Size=560,800 Selected=0xE927CF2F
-DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=100,119 Size=1280,701 CentralNode=1 Selected=0xE927CF2F
+DockNode    ID=0x00000001 Pos=100,100 Size=1280,720 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=1280,360 Selected=0x5E16F277
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1280,358 Selected=0xE927CF2F
 
