add TimeyID classes

--- a/TimeyApplication/TimeyApplication.vcxproj
+++ b/TimeyApplication/TimeyApplication.vcxproj
@@ -147,7 +147,7 @@
     <ClInclude Include="src\timey_pch.h" />
     <ClInclude Include="src\UI\ImguiBackend.h" />
     <ClInclude Include="src\UI\UILayer.h" />
-    <ClInclude Include="src\UI\Windows.h" />
+    <ClInclude Include="src\UI\UIWindows.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\AppCore\Application.cpp" />
@@ -161,7 +161,7 @@
     </ClCompile>
     <ClCompile Include="src\UI\ImguiBackend.cpp" />
     <ClCompile Include="src\UI\UILayer.cpp" />
-    <ClCompile Include="src\UI\Windows.cpp" />
+    <ClCompile Include="src\UI\UIWindows.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TimeyCore\TimeyCore.vcxproj">
