--- a/TimeyApplication/imgui.ini
+++ b/TimeyApplication/imgui.ini
@@ -1,5 +1,4 @@
 [Window][Minimal Window]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -19,8 +18,19 @@ Size=1280,358
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Minamal Windows]
+Pos=0,0
+Size=1280,780
+Collapsed=0
+
+[Window][Standard Windows]
+Pos=60,60
+Size=182,74
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=100,100 Size=1280,720 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=1280,360 Selected=0x5E16F277
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1280,358 Selected=0xE927CF2F
+DockSpace   ID=0x75412C0C Window=0x65B0AA10 Pos=160,198 Size=182,36 CentralNode=1
 
