--- a/TimeyApplication/imgui.ini
+++ b/TimeyApplication/imgui.ini
@@ -1,11 +1,10 @@
 [Window][Minimal Window]
-Pos=0,0
+Pos=12,43
 Size=500,200
 Collapsed=0
 
 [Window][Debug##Default]
-ViewportPos=160,160
-ViewportId=0x9F5F46A1
+Pos=60,60
 Size=400,400
 Collapsed=0
 
@@ -15,8 +14,7 @@ Size=191,48
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-ViewportPos=350,110
-ViewportId=0xA4D966FE
+Pos=0,0
 Size=1280,780
 Collapsed=0
 DockId=0x00000003,0
@@ -37,6 +35,7 @@ Size=1274,779
 Collapsed=0
 
 [Window][Timey]
+Pos=0,0
 Size=1280,780
 Collapsed=0
 
@@ -62,13 +61,18 @@ Size=316,268
 Collapsed=0
 
 [Window][Add Session]
-ViewportPos=467,130
+ViewportPos=394,145
 ViewportId=0xDE215201
 Size=500,800
 Collapsed=0
 
+[Window][Example: Log]
+Pos=46,83
+Size=500,400
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=350,110 Size=1280,780 Split=Y
+DockNode    ID=0x00000001 Pos=112,143 Size=1280,780 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=1280,360 Selected=0x5E16F277
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1280,358 Selected=0xE927CF2F
 
