add some functionalities to view session window

--- a/TimeyApplication/imgui.ini
+++ b/TimeyApplication/imgui.ini
@@ -4,7 +4,8 @@ Size=500,200
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=160,160
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -35,7 +36,6 @@ Size=1274,779
 Collapsed=0
 
 [Window][Timey]
-Pos=0,0
 Size=1280,780
 Collapsed=0
 
@@ -61,7 +61,7 @@ Size=316,268
 Collapsed=0
 
 [Window][Add Session]
-ViewportPos=411,139
+ViewportPos=814,157
 ViewportId=0xDE215201
 Size=500,800
 Collapsed=0
