--- a/TimeyApplication/TimeyApplication.vcxproj.filters
+++ b/TimeyApplication/TimeyApplication.vcxproj.filters
@@ -13,6 +13,9 @@
     <Filter Include="Platform\Win32">
       <UniqueIdentifier>{8C36D494-7804-C89A-6198-38C14D05A4FF}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UI">
+      <UniqueIdentifier>{83755900-6F01-880B-D8AF-880BC45A880B}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\AppCore\Application.h">
@@ -42,10 +45,16 @@
     <ClInclude Include="src\Platform\Win32\Win32Windows.h">
       <Filter>Platform\Win32</Filter>
     </ClInclude>
+    <ClInclude Include="src\UI\ImguiBackend.h">
+      <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UI\UILayer.h">
+      <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UI\UIWindows.h">
+      <Filter>UI</Filter>
+    </ClInclude>
     <ClInclude Include="src\timey_pch.h" />
-    <ClInclude Include="src\UI\ImguiBackend.h" />
-    <ClInclude Include="src\UI\UILayer.h" />
-    <ClInclude Include="src\UI\UIWindows.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\AppCore\Application.cpp">
@@ -63,9 +72,15 @@
     <ClCompile Include="src\Platform\Win32\timey_pch.cpp">
       <Filter>Platform\Win32</Filter>
     </ClCompile>
+    <ClCompile Include="src\UI\ImguiBackend.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\UI\UILayer.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\UI\UIWindows.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
     <ClCompile Include="src\timey_pch.cpp" />
-    <ClCompile Include="src\UI\ImguiBackend.cpp" />
-    <ClCompile Include="src\UI\UILayer.cpp" />
-    <ClCompile Include="src\UI\UIWindows.cpp" />
   </ItemGroup>
 </Project>
